# husky-tricks

./: .gitignore  ChangeLog.md  LICENSE  LICENSE.md  NOTES.md  README.md  husky-tricks.cabal  package.yaml  stack.yaml
app/: Main.hs
great/: Great.hs
hello/: Hello.hs
src/: Lib.hs
