name:                husky-tricks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rubin55/husky-tricks#readme
license:             BSD3
license-file:        LICENSE
author:              Rubin Simons
maintainer:          rubin@xs4all.nl
copyright:           Copyright © 2017 Rubin Simons
category:            Experiments
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable husky-tricks-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , husky-tricks
  default-language:    Haskell2010

test-suite husky-tricks-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , husky-tricks
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rubin55/husky-tricks
