cabal-version:      2.4
name:               husky-tricks
version:            0.1.0
synopsis:           A bag of Haskell tricks to aid learning
description:        Various experiments in Haskell
bug-reports:        https://github.com/rubin55/husky-tricks/issues
license:            MIT
author:             Rubin Simons
maintainer:         me@rubin55.org
copyright:          Copyright (c) 2022, Rubin Simons
category:           Experiment

executable hello
    main-is:          Main.hs
    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   hello
    default-language: Haskell2010
